test/visibility/private/uses/onlyStillWorks.good
onlyStillWorks.chpl:11: In function 'main':
onlyStillWorks.chpl:14: error: 'a' undeclared (first use this function)
